deploy/eks/namespace.yaml
# SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Namespace
metadata:
  name: ldapportal
  labels:
    app.kubernetes.io/name: ldapportal
